fix overlapping of Lang Nav

--- a/DE-DE/style.css
+++ b/DE-DE/style.css
@@ -14,6 +14,7 @@ h1 {
   color: #8D20AE;
   text-align: center;
   margin-bottom: 0;
+  margin-top: 45px;
 }
 .container {
   margin: 0 auto;
